# devpockit

./: .editorconfig  .env.example  .gitignore  .prettierrc  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_PAGES_DEPLOYMENT.md  HTTPS_DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  eslint.config.mjs  jest.config.js  jest.setup.js  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vercel.json
.github/: CODE_REVIEW_CHECKLIST.md  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  codeql-analysis.yml  deploy.yml  release.yml
backend/: .env.example  README.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: f0aedf77b4d7_initial_migration_create_users_table.py
backend/app/: __init__.py
backend/app/api/: auth.py  deps.py  tools.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: user.py
backend/app/schemas/: base.py  tools.py  user.py
backend/app/services/: tools_service.py  user_service.py
certificates/: localhost-key.pem
docs/: ARCHITECTURE.md  COMMUNITY.md  DEVELOPMENT.md  LICENSES.md  RELEASES.md  SECURITY_AUDIT.md  YAML_PATH_FINDER_IMPLEMENTATION_PLAN.md  code-editor-implementation-plan.md
frontend/: .eslintrc.json  .prettierrc  README.md  jest.config.js  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend/certificates/: localhost.pem
public/: robots.txt
scripts/: test-build.sh  verify-build.js
src/: global.d.ts
src/__mocks__/: uuid.js
src/__tests__/: basic.test.ts  integration.test.tsx  url-encoder-accessibility.test.tsx  url-encoder-edge-cases.test.tsx  url-encoder-integration.test.tsx  url-encoder-mobile.test.tsx  (+1 more)
(+254 files in other folders)
